# innovation-bank-api

./: .env  docker-compose.yml  index.html  tailwind.config.ts
backend/: .env  .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 19458490fb7f_create_ideas_table.py  baa31214613a_create_users_table.py
backend/app/: main.py
backend/app/api/: auth.py  ideas.py
backend/app/core/: auth.py  logging.py  security.py
backend/app/db/: models.py  session.py  user.py  vote.py
backend/app/repositories/: idea_repository.py
backend/app/schemas/: idea.py
backend/app/services/: idea_service.py
frontend/: Dockerfile  README.md  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: Layout.tsx  ProtectedRoute.tsx  WordCloud.tsx
frontend/src/contexts/: authcontext.tsx
frontend/src/pages/: Home.tsx  IdeaDetail.tsx  Login.tsx  NewIdea.tsx
frontend/src/services/: api.ts
frontend/src/utils/: stopwords-pt.ts
frontend/supabase/migrations/: 20251112164426_a14edfaf-e6f0-439f-8bee-51fb02da9b82.sql  20251112164437_754d0b22-5f5f-41ec-8034-ddb6309b1d06.sql
src/: index.css
src/components/: IdeaCard.tsx
src/integrations/supabase/: types.ts
src/pages/: Home.tsx  IdeaDetail.tsx  Login.tsx
supabase/: config.toml
